--- a/htdocs/html/bio.html
+++ b/htdocs/html/bio.html
@@ -28,7 +28,27 @@
             <div class="container">
                 <div class="align-items-center row">
                     <div class="col-lg-12 mb-12">
-                        <h1 class="display-4 fw-bold mb-3 text-dark text-center">Coming Soon</h1>
+                        <p class="fw-light mb-1">
+                            Paul was born at Queen of Angels Hospital in Los Angeles, CA, and spent his early years in Panorama City in the San Fernando Valley. At 8, his family moved to Newhall, CA (now Santa Clarita), where he lived until his 30s before heading up to Washington state.
+                        </p>
+                        <P>
+                            Paul became a Christian at 14 after reading The Late Great Planet Earth, and he got involved with several churches, including Agape, a "Jesus People" church. With a couple of friends, he formed a small vocal group, performing at various churches. When he turned 18, he went on to attend Biola College.
+                        </p>
+                        <P>
+                            He met his wife, Virginia, when he was 16. They didn’t fall in love right away but quickly became best friends, staying close for seven years before getting married. Paul loves music, and he and Virginia even played in a band together called Halal, with him on guitar and vocals and Virginia singing. Virginia’s daughter, Joy, was 7 when they got married, and Paul loved being a dad. They sang to each other at their wedding, and not long after, they moved to Washington. A year later, they welcomed their son, Jonathan.
+                        </p>
+                        <P>
+                            Jonathan had a challenging start in life—he was diagnosed with a heart defect (aortic stenosis) at just over a month old, requiring open-heart surgery. Over the years, he’s been through two heart surgeries, including a valve replacement and pacemaker implant at 14. Despite a few close calls, Jon’s resilience shines through. In 1998, the family moved to Orcas Island, which has been home ever since.
+                        </p>
+                        <P>
+                            Paul’s daughter, Joy, now has three children: Brandon, Kevin, and Jesica. They all live together on Orcas Island, making it a true extended family home.
+                        </p>
+                        <P>
+                            Originally planning to study psychology, Paul switched to computer science after his parents gifted him a computer. After graduating, he launched a career as a software engineer, working for various companies. A highlight was joining Amazon in its early startup days, where he played a key role in developing their shipping software, boosting performance by 85%.
+                        </p>
+                        <P>
+                            Today, Paul, Virginia, Joy, Jon, and Brandon, Kevin, and Jesica are happily settled on Orcas Island, enjoying life together as one big family.
+                        </p>
                     </div>
                 </div>
             </div>
