--- a/htdocs/html/bio.html
+++ b/htdocs/html/bio.html
@@ -41,13 +41,13 @@
                             Jonathan had a challenging start in life—he was diagnosed with a heart defect (aortic stenosis) at just over a month old, requiring open-heart surgery. Over the years, he’s been through two heart surgeries, including a valve replacement and pacemaker implant at 14. Despite a few close calls, Jon’s resilience shines through. In 1998, the family moved to Orcas Island, which has been home ever since.
                         </p>
                         <P>
-                            Paul’s daughter, Joy, now has three children: Brandon, Kevin, and Jesica. They all live together on Orcas Island, making it a true extended family home.
+                            Paul’s daughter, Joy, now has three children: Brandon, Kevin, and Jessica. They all live together on Orcas Island, making it a true extended family home.
                         </p>
                         <P>
-                            Originally planning to study psychology, Paul switched to computer science after his parents gifted him a computer. After graduating, he launched a career as a software engineer, working for various companies. A highlight was joining Amazon in its early startup days, where he played a key role in developing their shipping software, boosting performance by 85%.
+                            Originally planning to study psychology, Paul switched to computer science after his parents gifted him a computer. After graduating, he launched a career as a software engineer, working for various companies. A highlight was joining <a href="employment.html#amazon" target="_blank">Amazon</a> in its early startup days, where he played a key role in developing their shipping software, boosting performance by 85%.
                         </p>
                         <P>
-                            Today, Paul, Virginia, Joy, Jon, and Brandon, Kevin, and Jesica are happily settled on Orcas Island, enjoying life together as one big family.
+                            Today, Paul, Virginia, Joy, Jon, and Brandon, Kevin, and Jessica are happily settled on Orcas Island, enjoying life together as one big family.
                         </p>
                     </div>
                 </div>
