Adding a slide show

--- a/htdocs/html/bio.html
+++ b/htdocs/html/bio.html
@@ -4,9 +4,9 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="Pinegrow Web Editor - Professional Services Bootstrap v5 Template">
-        <meta name="author" content="">
-        <title>Blank Template for Bootstrap</title>
+        <meta name="description" content="Paul Carrick">
+        <meta name="author" content="Paul Carrick">
+        <title>paul-carrick.com - Bio</title>
         <!-- Bootstrap core CSS -->
         <link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" href="../css/blocks.css">
